[MODEL] Cleaned up transaction model